crates/rome_formatter/tests/specs/prettier/js/last-argument-expansion/break-parent.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: break-parent.js

---
# Input
```js
({
  processors: [
    require("autoprefixer", {
      browsers: ["> 1%", "last 2 versions", "ie >= 11", "Firefox ESR"]
    }),
    require("postcss-url")({
      url: url =>
        url.startsWith("/") || /^[a-z]+:/.test(url) ? url : `/static/${url}`
    })
  ]
});

true
  ? test({
      a: 1
    })
  : <div
      a={123412342314}
      b={123412341234}
      c={123412341234}
      d={123412341234}
      e={123412341234}
      f={123412341234}
      g={123412341234}
    />;

```

# Output
```js
({
  processors: [
    require(
      "autoprefixer",
      { browsers: ["> 1%", "last 2 versions", "ie >= 11", "Firefox ESR"] },
    ),
    require("postcss-url")({
      url: (url) =>
        url.startsWith("/") || /^[a-z]+:/.test(url) ? url : `/static/${url}`,
    }),
  ],
});

true
  ? test({
      a: 1
    })
  : <div
      a={123412342314}
      b={123412341234}
      c={123412341234}
      d={123412341234}
      e={123412341234}
      f={123412341234}
      g={123412341234}
    />;

```

# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ break-parent.js:17:5
   │  
17 │     : <div
   │ ┌─────^
18 │ │       a={123412342314}
<<<<<<< HEAD
19 │ │       b={123412341234}
20 │ │       c={123412341234}
   · │
24 │ │       g={123412341234}
25 │ │     />;
   │ └──────^ JSX only syntax
=======
   │ └───────^ This expression cannot be assigned to

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:18:22
   │
18 │       a={123412342314}
   │                      ^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:19:22
   │
19 │       b={123412341234}
   │                      ^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:20:22
   │
20 │       c={123412341234}
   │                      ^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:21:22
   │
21 │       d={123412341234}
   │                      ^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:22:22
   │
22 │       e={123412341234}
   │                      ^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:23:22
   │
23 │       f={123412341234}
   │                      ^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ break-parent.js:24:22
   │
24 │       g={123412341234}
   │                      ^ unexpected

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ break-parent.js:25:6
   │
25 │     />;
   │      ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found ';'
   ┌─ break-parent.js:25:7
   │
25 │     />;
   │       ^ Expected an expression here
>>>>>>> 408dcd197df3a39964878660447b8154b594bbcb


```


